Criando List View de usuario sem a funçao de editar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="tvEmail">Email</string>
     <string name="tvCpf">CPF</string>
     <string name="tvSenha">Senha</string>
+    <string name="title_activity_lista_usuario">ListaUsuarioActivity</string>
 </resources>
