--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="tvCpf">CPF</string>
     <string name="tvSenha">Senha</string>
     <string name="title_activity_lista_usuario">ListaUsuarioActivity</string>
+    <string name="title_activity_lista_treinador">ListaTreinadorActivity</string>
 </resources>
